--- a/src/app/pages/joke-list-page/confirmation-remove-joke/confirmation-remove-joke.component.html
+++ b/src/app/pages/joke-list-page/confirmation-remove-joke/confirmation-remove-joke.component.html
@@ -1,1 +1,12 @@
-<p>confirmation-remove-joke works!</p>
+<h1 mat-dialog-title>{{ Confirmation }}</h1>
+
+<div mat-dialog-content>
+  <div class="question">
+    <p>{{ Question }}</p>
+  </div>
+</div>
+
+<div mat-dialog-actions>
+  <button mat-flat-button mat-dialog-close>{{ No }}</button>
+  <button mat-raised-button mat-dialog-close color="warn" (click)="onRemoveJoke(0)">{{ Yes }}</button>
+</div>
