--- a/src/app/pages/joke-list-page/remove-joke-btn/remove-joke-btn.component.html
+++ b/src/app/pages/joke-list-page/remove-joke-btn/remove-joke-btn.component.html
@@ -1,3 +1,3 @@
 <div>
-  <button class="btn-delete" (click)="onRemoveJoke()">{{ Delete }}</button>
+  <button class="btn-delete">{{ Delete }}</button>
 </div>
