category to jokes in jokelist

--- a/src/app/pages/joke-list-page/confirmation-remove-joke/confirmation-remove-joke.component.html
+++ b/src/app/pages/joke-list-page/confirmation-remove-joke/confirmation-remove-joke.component.html
@@ -8,5 +8,9 @@
 
 <div mat-dialog-actions>
   <button mat-flat-button mat-dialog-close>{{ No }}</button>
-  <button mat-raised-button mat-dialog-close color="warn" (click)="onRemoveJoke(0)">{{ Yes }}</button>
+  <button mat-raised-button mat-dialog-close color="warn" (click)="onRemoveJoke(0)" (click)="onPress()">{{ Yes }}</button>
+</div>
+
+<div *ngIf="display">
+  <app-success-remove-joke-alert></app-success-remove-joke-alert>
 </div>
