transmission new joke

--- a/src/app/components/make-joke/make-joke/make-joke.component.html
+++ b/src/app/components/make-joke/make-joke/make-joke.component.html
@@ -23,7 +23,7 @@
 
 <div mat-dialog-actions>
   <button mat-flat-button mat-dialog-close>{{ Cancel }}</button>
-  <button mat-raised-button mat-dialog-close color="warn">{{ Add }}</button>
+  <button mat-raised-button mat-dialog-close color="warn" (click)="addNewJoke()">{{ Add }}</button>
 </div>
 
 
