adding new joke to list

--- a/src/app/pages/joke-list-page/confirmation-remove-joke/confirmation-remove-joke.component.html
+++ b/src/app/pages/joke-list-page/confirmation-remove-joke/confirmation-remove-joke.component.html
@@ -8,7 +8,7 @@
 
 <div mat-dialog-actions>
   <button mat-flat-button mat-dialog-close>{{ No }}</button>
-  <button mat-raised-button mat-dialog-close color="warn" (click)="onRemoveJoke(0)" (click)="onPress()">{{ Yes }}</button>
+  <button mat-raised-button mat-dialog-close color="warn" (click)="onRemoveJoke()" (click)="onPress()">{{ Yes }}</button>
 </div>
 
 <div *ngIf="display">
