--- a/src/app/pages/joke-list-page/joke-list-page.component.html
+++ b/src/app/pages/joke-list-page/joke-list-page.component.html
@@ -9,7 +9,7 @@
   <app-joke-list
   *ngIf="!!jokes && !!categories"
   [categories]="categories"
-  [jokes]="jokes"
+  [jokes]="jokesNewStatePage"
   ></app-joke-list>
 </div>
 
