--- a/src/app/pages/joke-list-page/joke-list/joke-list/joke-list.component.html
+++ b/src/app/pages/joke-list-page/joke-list/joke-list/joke-list.component.html
@@ -9,7 +9,7 @@
           <div class="joke-text" *ngIf="!!joke.content">
             <p>{{ joke.content }}</p>
           </div>
-          <app-remove-joke-btn (click)="openConfirmation()"></app-remove-joke-btn>
+          <app-remove-joke-btn (click)="openConfirmation(joke)"></app-remove-joke-btn>
         </div>
       </ng-container>
     </div>
