--- a/src/app/components/open-add-joke-btn/open-add-joke-btn.component.scss
+++ b/src/app/components/open-add-joke-btn/open-add-joke-btn.component.scss
@@ -11,7 +11,11 @@
     border-radius: 8px;
     border: none;
     position: absolute;
-    top: calc(20% - 100px/2 + 50px);
+    top: calc(20% - 100px/2 + 5px);
     left: calc(50% - 110px/2 - 329px);
+
+    @media screen and (max-width: 768px){
+      left: calc(95% - 110px/2 - 329px);
+    }
   }
 }
