--- a/src/app/pages/joke-list-page/joke-list/joke-list/joke-list.component.scss
+++ b/src/app/pages/joke-list-page/joke-list/joke-list/joke-list.component.scss
@@ -9,7 +9,7 @@
       justify-content: center;
       align-items: center;
       position: relative;
-      top: 150px;
+      top: 100px;
 
       .joke-boxes {
         width: 768px;
@@ -18,6 +18,11 @@
         gap: 10px;
         flex-wrap: wrap;
         padding-top: 75px;
+
+        @media screen and (max-width: 768px){
+          justify-content: center;
+          max-width: 100%;
+        }
 
         .joke-box {
           min-width: 377px;
