--- a/src/app/pages/joke-page/joke/joke.component.scss
+++ b/src/app/pages/joke-page/joke/joke.component.scss
@@ -8,8 +8,16 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      margin-top: 250px;
+      margin-top: 180px;
       position: relative;
+
+      @media screen and (max-width: 768px){
+        display: flex;
+        flex: 1;
+        overflow: hidden;
+        max-width: 100%;
+        margin-left: 10px;
+      }
 
       .joke-box {
         height: 350px;
@@ -21,7 +29,7 @@
         flex-direction: column;
 
         .category {
-          width: 704px;
+          width: auto;
           font-size: 14px;
           font-weight: 400;
           text-align: end;
@@ -38,6 +46,7 @@
           line-height: 22px;
           text-align: center;
           margin: 3px 32px;
+          overflow-wrap: break-word;
         }
       }
     }
