--- a/src/app/pages/joke-page/show-next-joke-btn/show-next-joke-btn.component.scss
+++ b/src/app/pages/joke-page/show-next-joke-btn/show-next-joke-btn.component.scss
@@ -11,7 +11,11 @@
     border-radius: 8px;
     border: none;
     position: absolute;
-    top: calc(55% - 20px/2 + 110px);
+    top: calc(55% - 20px/2 + 40px);
     left: calc(50% - 194px/2 + 287px);
+
+    @media screen and (max-width: 768px){
+      left: calc(95% - 110px/2 - 329px);
+    }
   }
 }
